# CS-119-SymKit-project

./: .gitignore  DIRECTIVES  NOMS.txt  README.txt  build.sh  symkit.pro
alpha/: alpha.pro  alphascene.cpp  alphascene.h  assets.cpp  assets.h  main.cpp  newtonsphere.cpp  newtonsphere.h  pendparticle.cpp  pendule.cpp  pendule.h  pendulecoupl.cpp  pendulecoupl.h  ressor.cpp  ressor.h
alpha/descriptors/: pendulec.cpp  pendulec.h  ressort.h  (+7 more)
beta/: assets.cpp  assets.h  beta.pro  betascene.cpp  betascene.h  main.cpp  marbled.cpp  marbled.h
doc/: JOURNAL.txt  REPONSES.txt
symath/: descriptor.cpp  descriptor.h  integrators.h  integrators.tpp  skerror.cpp  skerror.h  skutils.h  svector.h  svector.tpp  symath.pro  vector.cpp  vector.h
symgraph/: camera.cpp  camera.h  glmodel.cpp  glmodel.h  graphtools.cpp  graphtools.h  scene.cpp  scene.h  scenewrapper.cpp  scenewrapper.h  shaders.qrc  skactor.h  symgraph.pro  timercontrol.h  vertex_shader.glsl
symplot/: plot_shaders.qrc  plot_vertex_shader.glsl  plotdata.h  plotstream.h  plotutils.h  skplot.cpp  skplot.h  skplot2d.cpp  skplot2d.h  symplot.pro
symviewer/: consoleviewer.cpp  consoleviewer.h  skviewer.cpp  skviewer.h  skviewerpanel.cpp  skviewerpanel.h  skviewerscreen.cpp  skviewerscreen.h  symviewer.pro
templates/: CMakeLists.txt  Integrateur_test.cpp  makefile  oscillateur_test.cpp  pendules_test.cpp  ressort_test.cpp  svector_test.cpp  vector_test.cpp
templates/pendule_couple_old/: pendparticle.cpp  pendparticle.h  pendulec.cpp  pendulec.h  pendulec1.cpp  pendulec1.h  pendulec2.cpp  pendulec2.h  pendulecoupl.cpp
(+116 files in other folders)
